--- a/CNNで画像分類2022.ipynb
+++ b/CNNで画像分類2022.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNenl8FZZM1IHEK/IdLIiVV",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sherbw28/class_deep/blob/main/CNN%E3%81%A7%E7%94%BB%E5%83%8F%E5%88%86%E9%A1%9E2022.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,47 +12,45 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from keras.models import Sequential\n",
-        "from keras.layers import Conv2D, Flatten, Dense, MaxPooling2D, Dropout"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "j57Azk7PyGiG"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from keras.models import Sequential\n",
+        "from keras.layers import Conv2D, Flatten, Dense, MaxPooling2D, Dropout"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "zfedvjH4yWbN"
+      },
+      "outputs": [],
       "source": [
         "import tensorflow as tf\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import cv2\n",
         "from matplotlib import pyplot"
-      ],
-      "metadata": {
-        "id": "zfedvjH4yWbN"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "cifar = tf.keras.datasets.cifar10"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "5w7jL-CGy0rp"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "cifar = tf.keras.datasets.cifar10"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "(x_train,y_train),(x_test,y_test) = cifar.load_data()"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,63 +58,58 @@
         "id": "hWwZ0BbnEK5K",
         "outputId": "277405ca-e8d9-4e37-ec14-cb88ab1bfd61"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
             "170498071/170498071 [==============================] - 6s 0us/step\n"
           ]
         }
+      ],
+      "source": [
+        "(x_train,y_train),(x_test,y_test) = cifar.load_data()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "labels = ['飛行機','自動車','鳥','猫','鹿','犬','カエル','馬','船','トラック']"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "7Mp9DCUmESUq"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "labels = ['飛行機','自動車','鳥','猫','鹿','犬','カエル','馬','船','トラック']"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "x_train = x_train.astype('float32') / 255\n",
-        "x_test = x_test.astype('float32') / 255"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "Uqg5cYjlPiGF"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "x_train = x_train.astype('float32') / 255\n",
+        "x_test = x_test.astype('float32') / 255"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "y_train = tf.keras.utils.to_categorical(y_train,10)\n",
-        "y_test = tf.keras.utils.to_categorical(y_test,10)"
-      ],
+      "execution_count": 8,
       "metadata": {
         "id": "T-WJBBQXz1Kb"
       },
-      "execution_count": 8,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "y_train = tf.keras.utils.to_categorical(y_train,10)\n",
+        "y_test = tf.keras.utils.to_categorical(y_test,10)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from PIL import Image\n",
-        "for i in range(0,40):\n",
-        "  im = Image.fromarray(x_train[i])\n",
-        "  pyplot.subplot(5,8,i+1)\n",
-        "  pyplot.imshow(im)\n",
-        "pyplot.show()"
-      ],
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -143,12 +118,11 @@
         "id": "kzDMMByc0AnD",
         "outputId": "129beb71-86da-4806-bc56-a3db0545e234"
       },
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "TypeError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
@@ -161,10 +135,23 @@
             "\u001b[0;31mTypeError\u001b[0m: Cannot handle this data type: (1, 1, 3), <f4"
           ]
         }
+      ],
+      "source": [
+        "from PIL import Image\n",
+        "for i in range(0,40):\n",
+        "  im = Image.fromarray(x_train[i])\n",
+        "  pyplot.subplot(5,8,i+1)\n",
+        "  pyplot.imshow(im)\n",
+        "pyplot.show()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "t765wr6Y0Xlc"
+      },
+      "outputs": [],
       "source": [
         "num_classes = len(labels)\n",
         "in_shape = (32,32,3)\n",
@@ -189,40 +176,26 @@
         "    Dense(num_classes),\n",
         "    tf.keras.layers.Activation('softmax'),\n",
         "])"
-      ],
-      "metadata": {
-        "id": "t765wr6Y0Xlc"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "-9OwvmI-4SCJ"
+      },
+      "outputs": [],
       "source": [
         "model.compile(\n",
         "    loss='categorical_crossentropy',\n",
         "    optimizer='adam',\n",
         "    metrics=['accuracy']\n",
         ")"
-      ],
-      "metadata": {
-        "id": "-9OwvmI-4SCJ"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.fit(\n",
-        "    x_train,y_train,\n",
-        "    batch_size=128,\n",
-        "    epochs=100,\n",
-        "    verbose=1,\n",
-        "    validation_data=(x_test,y_test),\n",
-        "\n",
-        ")"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -230,11 +203,10 @@
         "id": "80qIZJS31nmF",
         "outputId": "e559d786-6735-4508-c7e1-0f78fdfb207f"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/100\n",
             "391/391 [==============================] - 15s 13ms/step - loss: 1.6490 - accuracy: 0.3968 - val_loss: 1.3029 - val_accuracy: 0.5255\n",
@@ -439,23 +411,30 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<keras.callbacks.History at 0x7ff7f4479e50>"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "model.fit(\n",
+        "    x_train,y_train,\n",
+        "    batch_size=128,\n",
+        "    epochs=100,\n",
+        "    verbose=1,\n",
+        "    validation_data=(x_test,y_test),\n",
+        "\n",
+        ")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "acc = fit.history['accuracy']\n",
-        "loss = fit.history['loss']"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -464,12 +443,11 @@
         "id": "2QFSxEID5Obk",
         "outputId": "e9d4e010-5edf-456c-b2ef-2e7aead9c10d"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "NameError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -477,16 +455,45 @@
             "\u001b[0;31mNameError\u001b[0m: name 'fit' is not defined"
           ]
         }
+      ],
+      "source": [
+        "acc = fit.history['accuracy']\n",
+        "loss = fit.history['loss']\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "IGSS63GsJ4nW"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyNenl8FZZM1IHEK/IdLIiVV",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.2 (v3.10.2:a58ebcc701, Jan 13 2022, 14:50:16) [Clang 13.0.0 (clang-1300.0.29.30)]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
